--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -28,6 +28,8 @@
     <div id="bodyContainer">
         <%-include("../includes/flash.ejs") %> 
         <%-body -%> 
+        <!-- User Like & Dislike Message Box -->
+        <div id="userlikeMsgBox" class="userLikemsg-box userLikehidden"></div> 
     </div>
     <%-include("../includes/footer.ejs") %>
     
