Working on user Liked Product

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,7 +8,7 @@
     --color:white;
     --mdBlack: #060606;
     --textColor: #132713cd;
-    --lowBlack: #62626215;
+    --lowBlack: #62626251;
     --md_white_color: #e3e3e3;
     --links:#081225;  
     --card_shadow: #00000033;  
@@ -16,7 +16,7 @@
     --blackText: #000000;
     --md_blackText: #b9b9b9;
     --blackCard:#fefefe;
-    --blackCard2:#e7e8e9;
+    --blackCard2:#f3f6f9;
 
     /* New updated Card Colors  */
     --CardBackground:#ebedee;
