--- a/public/css/review.css
+++ b/public/css/review.css
@@ -78,7 +78,8 @@
     padding:1em 1.2em;
     flex:1;  
     border:0.05em solid black;
-    background-color: var(--md_blackText);
+    background-color: var(--inputBoxColor);
+    color: var(--CardTextDarkColor);
     border-top-left-radius: 0.5em;
     border-bottom-left-radius: 0.5em;
     outline: none;
