--- a/public/css/watchProduct.css
+++ b/public/css/watchProduct.css
@@ -271,6 +271,7 @@
   gap:1em;
   font-size: 1rem;
   margin-bottom: 1em;
+  padding:0 1em;
 }
 .wtc-product-offerContainer>div{
     font-size: 0.9em;
@@ -309,6 +310,27 @@
 }
 .activeLike{
     color:red;
+}
+
+@media (max-width:900px){
+    #product_path{
+        margin:1em 0 !important;
+    }
+}   
+
+@media (max-width:700px){
+    .watch_product_container{
+        padding: 3em 1em;
+    }
+}
+
+@media (max-width:600px){
+    .wtc-productDescription{
+        padding:0;
+    }
+    .wtc-product-image_selectionBox{
+        left:-3em;
+    }
 }
 
 /* Error Stylling */
