--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -478,15 +478,26 @@
                 <button class="hm-listing_item_addCard"> <i class="fa-solid fa-cart-shopping"></i> Add To Card</button>
               </div>
             </div>
-            <!-- Create a form so be able to send a post request for like Here Start -->
+            <!-- Create a form so be able to send a post  ,delete request for like Here Start -->
+            <% if(user) { %>
             <form action="/shopcard/<%-product._id%>/like" method="post"> 
               <input type="hidden" name="<%-product._id%>" value="<%-product._id%>"> 
-              <div id="listing_item_likeBtn"  data-product-id="<%=product._id %>"  data-isLiked="false"  class="listing_item_likeBtn ">
+              <div id="listing_item_likeBtn"  data-product-id="<%=product._id %>"  data-isLiked="false"  class="listing_item_likeBtn <%=  user && user.likedProduct.includes(product._id)? "activeLikeBtn" :"" %> ">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
                 <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"  />
               </svg>
              </div>
             </form>
+            <% } else { %>
+            <form action="/shopcard/<%-product._id%>/like" method="post"> 
+              <input type="hidden" name="<%-product._id%>" value="<%-product._id%>"> 
+              <div id="listing_item_likeBtn"  data-product-id="<%=product._id %>"  data-isLiked="false"  class="listing_item_likeBtn  ">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24">
+                <path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"  />
+              </svg>
+             </div>
+            </form>           
+            <% }  %>
             <!-- Create a form so be able to send a post request for like Here End -->
           </div>
           <% } %>
