--- a/view/includes/navbar.ejs
+++ b/view/includes/navbar.ejs
@@ -1,4 +1,4 @@
-<body>
+
 <nav>
     <div class="logo_box_container">
       <span id="logo_icon">
@@ -40,8 +40,11 @@
         </div>
       </div>
       <div class="home-nav-watchList">
-        <i class="fa-solid fa-heart"></i>
+        <a href="/shopcard/watchlist">
+         <i class="fa-solid fa-heart"></i>
         <span>WatchList</span>
+        </a>
+       
       </div>
       <div class="user-card">  <i class="fa-solid fa-cart-shopping"></i> <span> Cart</span>  </div> 
     <% } %>
@@ -67,4 +70,3 @@
     </div> 
 </nav> 
 <!-- <script src="/javascript/nav_side.js"></script> -->
-</body>
