--- a/public/css/watchlist.css
+++ b/public/css/watchlist.css
@@ -7,10 +7,11 @@
     display: grid;
     grid-template-columns: 16em 1fr;
     gap:2em;
-    background-color: #f4f5f6;
+    background-color: var(--bodyBackColor);
 }
 .watchlist-user-account-info{
-    background-color: #ffffff;
+    background-color: var(--darkCard);
+    max-height: fit-content;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -24,7 +25,7 @@
     justify-content: flex-start;
     gap:1em;
     align-items: center;
-    background-color: white;
+    background-color: var(--darkCard);
     border-radius: 0.2em;
     box-shadow: 0 0.5em 1em #5f5f5f16;
     margin-bottom:1.5em;
@@ -40,6 +41,9 @@
     width: 100%;
     object-fit: cover;
 }
+.wtc-user-bio{
+    color:var(--CardTextDarkColor);
+}
 .watchlist-user-account-info >div:not(:first-child){
     width: 100%;
     height: 3em;
@@ -50,6 +54,7 @@
     gap:1.5em;
     box-shadow: 0 0.5em 1em #97979716;
     border-bottom: 1px solid #5858585c;
+    color: var(--CardTextDarkColor);
     i{
         color:var(--links) 
     }
@@ -58,7 +63,7 @@
 .watchlist-user-account-info >div:not(:first-child):hover{
    cursor: pointer;
    p{
-     color:#5493ff;
+     color:var(--links);
    }
 }
 .watchlist-user-product-main-box{
@@ -74,7 +79,8 @@
     display: flex;
     justify-content: flex-start;
     align-items: center;
-    background-color: white;
+    background-color: var(--darkCard);
+    color:var(--CardTextDarkColor);
     border-radius: 0.2em;
     box-shadow: 0 0.5em 1em #5f5f5f16;
     border-bottom: 1px solid #5858585c;
@@ -87,7 +93,7 @@
     align-items: center;
     gap:1em;
     padding:0 1em;
-    background-color: white;
+    background-color: var(--darkCard);
     border-bottom: 1px solid #5858585c;
 }
 .watchlist-user-product-image{
@@ -107,9 +113,24 @@
     justify-content: space-between;
     align-items: flex-start;
 }
+.watchlist-user-product-title{
+    color: var(--CardTextDarkColor);
+}
+.watchlist-user-product-price{
+    color: var(--CardTextDarkColor);
+}
 .watchlist-user-product-brand{
     color: var(--links);
     padding: 0.5em 0 1em 0;
+}
+.watchlist-user-product-discount{
+    text-decoration: line-through;
+    margin:0 0.3em;
+    color: var(--lowBlack);
+}
+.watchlist-user-product-discount-off{
+    color: #0b860b;
+    margin:0 0.3em;
 }
 .watchlist-user-product-deleteBtn{
     cursor: pointer;
