--- a/public/css/index.css
+++ b/public/css/index.css
@@ -10,7 +10,7 @@
     --textColor: #132713cd;
     --lowBlack: #62626251;
     --md_white_color: #e3e3e3;
-    --links:#14a427;  
+    --links:#146fb0;  
     --card_shadow: #00000033;  
     --cardColor: #fefefe;
     --blackText: #000000;
@@ -42,7 +42,7 @@
     --textColor: #ffffff;
     --lowBlack: #a7a6a6c7;
     --md_white_color: #0d0b0b; 
-    --links:#dedede;
+    --links:#10a8c6;
     --card_shadow: #ffffff61; 
     --cardColor: #e2e2e2;
     --blackText: #000000;
@@ -59,7 +59,7 @@
     --CardTextDarkColor: #eeeeee;
     --CardTextMediumColor:#d9d8d8;
     --inputBoxColor: #1d1d1d;
-    --icon_color:#d4e1d9;
+    --icon_color:#e2f1fa;
     --specialCard:#0e0e0e17;
 }
 *{
