--- a/public/css/watchlist.css
+++ b/public/css/watchlist.css
@@ -56,14 +56,14 @@
     border-bottom: 1px solid #5858585c;
     color: var(--CardTextDarkColor);
     i{
-        color:var(--links) 
+        color:var(--icon_color) 
     }
     transition: all 0.2s ease;
 }
 .watchlist-user-account-info >div:not(:first-child):hover{
    cursor: pointer;
    p{
-     color:var(--links);
+     color:var(--icon_color);
    }
 }
 .watchlist-user-product-main-box{
@@ -84,6 +84,15 @@
     border-radius: 0.2em;
     box-shadow: 0 0.5em 1em #5f5f5f16;
     border-bottom: 1px solid #5858585c;
+}
+.watchlist-product-link-in-view{
+    text-decoration: none;
+    transition: 0.2s;
+}
+.watchlist-product-link-in-view:hover{
+    .watchlist-user-product-title{
+        color:var(--links);
+    }
 }
 .watchlist-user-product-box{
     height: 10em;
@@ -115,18 +124,27 @@
 }
 .watchlist-user-product-title{
     color: var(--CardTextDarkColor);
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 .watchlist-user-product-price{
     color: var(--CardTextDarkColor);
 }
 .watchlist-user-product-brand{
-    color: var(--links);
+    color: #07a007;
     padding: 0.5em 0 1em 0;
+}
+.watchlist-user-product-price{
+    font-size: 1.2em;
+    font-weight: 600;
 }
 .watchlist-user-product-discount{
     text-decoration: line-through;
     margin:0 0.3em;
-    color: var(--lowBlack);
+    color: var(--md_blackText);
 }
 .watchlist-user-product-discount-off{
     color: #0b860b;
