--- a/public/css/watchlist.css
+++ b/public/css/watchlist.css
@@ -152,5 +152,69 @@
 }
 .watchlist-user-product-deleteBtn{
     cursor: pointer;
-    color:#ff7a7a;
+}
+.watchlist-user-product-deleteBtn  .button {
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: rgb(20, 20, 20);
+  border: none;
+  font-weight: 600;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.164);
+  cursor: pointer;
+  transition-duration: 0.3s;
+  overflow: hidden;
+  position: relative;
+  gap: 1px;
+}
+
+.svgIcon {
+  width: 12px;
+  transition-duration: 0.3s;
+}
+
+.svgIcon path {
+  fill: white;
+}
+
+.watchlist-user-product-deleteBtn  .button:hover {
+  width: 110px;
+  border-radius: 50px;
+  transition-duration: 0.3s;
+  background-color: rgb(255, 69, 69);
+  align-items: center;
+  gap: 0;
+}
+
+.watchlist-user-product-deleteBtn  .button:hover .bin-bottom {
+  width: 30px;
+  transition-duration: 0.3s;
+  transform: translateY(60%);
+}
+.bin-top {
+  transform-origin: bottom right;
+}
+.watchlist-user-product-deleteBtn  .button:hover .bin-top {
+  width: 30px;
+  transition-duration: 0.3s;
+  transform: translateY(60%) rotate(160deg);
+}
+.watchlist-user-product-deleteBtn  .button::before {
+  position: absolute;
+  top: -35px;
+  content: "Delete";
+  color: white;
+  transition-duration: 0.3s;
+  font-size: 2px;
+}
+
+.watchlist-user-product-deleteBtn  .button:hover::before {
+  font-size: 13px;
+  opacity: 1;
+  transform: translateY(35px);
+  transition-duration: 0.3s;
 }
