--- a/view/listings/watchProduct.ejs
+++ b/view/listings/watchProduct.ejs
@@ -14,6 +14,51 @@
        <img data-aos="fade-up" data-aos-offset="20" data-aos-delay="10" data-aos-duration="500" class="wtc-productimage" src="<%-product.image[0] %>" alt="Product image">
        <!-- Like  -->
        <div class="wtc-productLikeBox"><i class="fa-solid fa-heart"></i></div>
+      <div class="wtc-productShareBox">
+        <!-- From Uiverse.io by Mohammad-Rahme-576 -->
+        <div class="tooltip-container">
+            <div class="button-content">
+                <span class="text"></span>
+                <svg class="share-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                    <path
+                        d="M18 16.08c-.76 0-1.44.3-1.96.77L8.91 12.7c.05-.23.09-.46.09-.7s-.04-.47-.09-.7l7.05-4.11c.54.5 1.25.81 2.04.81 1.66 0 3-1.34 3-3s-1.34-3-3-3-3 1.34-3 3c0 .24.04.47.09.7L8.04 9.81C7.5 9.31 6.79 9 6 9c-1.66 0-3 1.34-3 3s1.34 3 3 3c.79 0 1.5-.31 2.04-.81l7.12 4.16c-.05.21-.08.43-.08.65 0 1.61 1.31 2.92 2.92 2.92s2.92-1.31 2.92-2.92c0-1.61-1.31-2.92-2.92-2.92zM18 4c.55 0 1 .45 1 1s-.45 1-1 1-1-.45-1-1 .45-1 1-1zM6 13c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1zm12 7.02c-.55 0-1-.45-1-1s.45-1 1-1 1 .45 1 1-.45 1-1 1z">
+                    </path>
+                </svg>
+            </div>
+            <div class="tooltip-content">
+                <div class="social-icons">
+                    <a href="#" class="social-icon twitter" data-platform="twitter">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                            <path
+                                d="M23.953 4.57a10 10 0 01-2.825.775 4.958 4.958 0 002.163-2.723c-.951.555-2.005.959-3.127 1.184a4.92 4.92 0 00-8.384 4.482C7.69 8.095 4.067 6.13 1.64 3.162a4.822 4.822 0 00-.666 2.475c0 1.71.87 3.213 2.188 4.096a4.904 4.904 0 01-2.228-.616v.06a4.923 4.923 0 003.946 4.827 4.996 4.996 0 01-2.212.085 4.936 4.936 0 004.604 3.417 9.867 9.867 0 01-6.102 2.105c-.39 0-.779-.023-1.17-.067a13.995 13.995 0 007.557 2.209c9.053 0 13.998-7.496 13.998-13.985 0-.21 0-.42-.015-.63A9.935 9.935 0 0024 4.59z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-icon facebook" data-platform="facebook" >
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                            <path
+                                d="M24 12.073c0-6.627-5.373-12-12-12s-12 5.373-12 12c0 5.99 4.388 10.954 10.125 11.854v-8.385H7.078v-3.47h3.047V9.43c0-3.007 1.792-4.669 4.533-4.669 1.312 0 2.686.235 2.686.235v2.953H15.83c-1.491 0-1.956.925-1.956 1.874v2.25h3.328l-.532 3.47h-2.796v8.385C19.612 23.027 24 18.062 24 12.073z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-icon linkedin" data-platform="linkedin">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24">
+                            <path
+                                d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z">
+                            </path>
+                        </svg>
+                    </a>
+                    <a href="#" class="social-icon whatsapp" data-platform="whatsapp">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 32 32" fill="currentColor">
+                            <path
+                                d="M16 0C7.163 0 0 7.163 0 16c0 2.827.738 5.48 2.017 7.807L0 32l8.404-2.213A15.93 15.93 0 0016 32c8.837 0 16-7.163 16-16S24.837 0 16 0zm.002 29.188c-2.414 0-4.77-.648-6.833-1.87l-.49-.29-4.996 1.316 1.338-4.876-.317-.503A12.91 12.91 0 013.083 16c0-7.093 5.824-12.917 12.917-12.917S28.917 8.907 28.917 16 23.093 28.917 16.002 28.917zM22.54 20.52c-.348-.174-2.058-1.017-2.376-1.133-.318-.116-.55-.174-.782.174-.232.348-.894 1.134-1.09 1.36-.196.232-.406.261-.754.087-.348-.174-1.48-.544-2.817-1.732-1.045-.932-1.75-2.09-1.957-2.443-.203-.348-.023-.535.152-.708.156-.153.348-.406.522-.609.174-.203.232-.348.348-.58.116-.232.058-.435-.03-.609-.087-.174-.87-2.088-1.198-2.876-.316-.762-.634-.662-.87-.674l-.748-.012c-.232 0-.609.087-.927.406-.318.318-1.227 1.206-1.227 2.933 0 1.726 1.256 3.393 1.431 3.623.174.232 2.48 3.83 6.01 5.367.84.362 1.494.58 2.005.748.87.278 1.653.239 2.27.145.698-.104 2.174-.898 2.487-1.77.313-.87.313-1.627.232-1.777-.087-.145-.376-.232-.782-.435z" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </div>
+    
+    </div>
        <div class="wtc-buy-productBtn_box">
         <a href="/shopcard/<%=product._id%>/checkout"  data-aos="fade-down" data-aos-offset="-100">
          <button class="buy_Productbutton">
@@ -235,7 +280,7 @@
     </div>
 </div>
 </div>
- 
+
 <script src="/javascript/watch.js"></script>
 <script>
     const likeBtns=document.querySelectorAll(".listing_item_likeBtn");
