Added a Explore Page , and still is working

--- a/view/listings/index.ejs
+++ b/view/listings/index.ejs
@@ -8,7 +8,9 @@
          <h1 data-aos="fade-down" data-aos-duration="700" id="main-heading_">
             Exclusive collection <br> for everyone
          </h1>
+         <a href="/shopcard/explore">
          <button id="explore_home_btn" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200" > Explore now <span><i class="fa-solid fa-magnifying-glass"></i></span>  </button>
+         </a>
       </div>
       <div class="hero-image-box">
         <div class="hero-image">
