--- a/view/layouts/boilerPlateCode.ejs
+++ b/view/layouts/boilerPlateCode.ejs
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/css/buy.css">
     <link rel="stylesheet" href="/css/privacy_policy.css">
     <link rel="stylesheet" href="/css/watchlist.css">
+    <link rel="stylesheet" href="/css/Explore.css">
     <!-- Google fonts and icons Link -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=favorite" /> 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -23,6 +24,12 @@
     <!-- Sweet Alert library link -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <style>
+        .bodyContainer::-webkit-scrollbar{
+           display: none !important;
+        }
+    </style>
 </head>
 <body   >
     <%-include("../includes/navbar.ejs") %>
