--- a/view/users/ResetPassword.ejs
+++ b/view/users/ResetPassword.ejs
@@ -165,6 +165,7 @@
         function checkPasswordStrength(password) {
             const strengthBar = document.getElementById('passwordStrength');
             let strength = 0;
+            console.log(password);
             
             if (password.length >= 6) strength++;
             if (password.match(/[a-z]/) && password.match(/[A-Z]/)) strength++;
